--- a/src/styles/tufte.css
+++ b/src/styles/tufte.css
@@ -85,35 +85,28 @@ body {
 
 h1 {
     font-weight: 400;
-    margin-top: 4rem;
+    margin-top: 3rem;
     margin-bottom: 1.5rem;
     font-size: 3.2rem;
     line-height: 1;
 }
 
-h1.article {
-    font-variant: small-caps;
-}
-
 h2 {
-    font-style: italic;
+    /* font-style: italic; */
+    font-style: normal;
+    font-variant: small-caps;
     font-weight: 400;
-    margin-top: 3.5rem;
+    margin-top: 2rem;
     margin-bottom: 1.4rem;
     font-size: 2.2rem;
     line-height: 1;
-}
-
-h2.article {
-    font-style: normal;
-    font-variant: small-caps;
 }
 
 h3 {
     font-style: italic;
     font-weight: 400;
     font-size: 1.7rem;
-    margin-top: 2rem;
+    margin-top: 1.75rem;
     margin-bottom: 1.4rem;
     line-height: 1;
 }
@@ -129,14 +122,6 @@ hr {
     padding: 0;
 }
 
-p.subtitle {
-    font-style: italic;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    font-size: 1.2rem;
-    display: block;
-    line-height: 1;
-}
 
 .numeral {
     font-family: et-book-roman-old-style;
@@ -152,8 +137,8 @@ article {
 }
 
 section {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
 }
 
 p,
@@ -171,12 +156,33 @@ p {
     vertical-align: baseline;
 }
 
-/* ----- 3. Navigation ----- */
+/* ----- 3. Custom CSS ----- */
 
+p.subtitle {
+    font-style: italic;
+    margin-top: 1.25rem;
+    margin-bottom: 1.5rem;
+    font-size: 1.2rem;
+    display: block;
+    line-height: 1;
+}
+
+p.pageinfo {
+    font-style: italic;
+    margin-top: 1.5rem;
+    margin-bottom: 1.25rem;
+    font-size: 1rem;
+    display: block;
+    line-height: 1;
+}
+
+/* div.page-content {
+    margin-top: 3rem;
+} */
 
 /* ----- 4. Chapter Epigraphs ----- */
 div.epigraph {
-    margin: 5em 0;
+    margin: 3em 0;
 }
 
 div.epigraph > blockquote {
@@ -203,12 +209,12 @@ blockquote {
 }
 
 blockquote p {
-    width: 55%;
+    width: 75%;
     margin-right: 40px;
 }
 
 blockquote footer {
-    width: 55%;
+    width: 75%;
     font-size: 1.1rem;
     text-align: right;
 }
@@ -216,14 +222,13 @@ blockquote footer {
 section > p,
 section > footer,
 section > table {
-    width: 55%;
+    width: 100%;
 }
 
-/* 50 + 5 == 55, to be the same width as paragraph */
 section > dl,
 section > ol,
 section > ul {
-    width: 50%;
+    width: 95%;
     -webkit-padding-start: 5%;
 }
 
@@ -238,7 +243,7 @@ figure {
     font-size: 100%;
     font: inherit;
     vertical-align: baseline;
-    max-width: 55%;
+    max-width: 75%;
     -webkit-margin-start: 0;
     -webkit-margin-end: 0;
     margin: 0 0 3em 0;
@@ -304,8 +309,8 @@ img {
 .marginnote {
     float: right;
     clear: right;
-    margin-right: -60%;
-    width: 50%;
+    margin-right: -45%;
+    width: 37.75%;
     margin-top: 0.3rem;
     margin-bottom: 0;
     font-size: 1.1rem;
