Update about me and about this site, tag -> topic, other stylistic updates

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -6,3 +6,8 @@ a[href*='github.com']::after {
     margin: 0 0 2px 3px;
     opacity: .6;
 }
+
+/* ----- Other ------ */
+span.concept {
+    font-variant: small-caps;
+}
