minor stylistic changes, added notes to quotes, updated content queue page

--- a/src/styles/tufte.css
+++ b/src/styles/tufte.css
@@ -336,6 +336,7 @@ img {
     font-family: et-book-roman-old-style;
     position: relative;
     vertical-align: baseline;
+    color: #f00000
 }
 
 .sidenote-number:after {
