--- a/src/styles/tufte.css
+++ b/src/styles/tufte.css
@@ -43,26 +43,50 @@
 
 /* ----- 2. Tufte CSS styles ----- */
 :root {
-    /* light */
+    /* light styles */
     --whiteBackground: #fffff8;
     --blackText: #111;
     --whiteShadow: 0.03em 0 #fffff8, -0.03em 0 #fffff8, 0 0.03em #fffff8, 0 -0.03em #fffff8, 0.06em 0 #fffff8, -0.06em 0 #fffff8, 0.09em 0 #fffff8, -0.09em 0 #fffff8, 0.12em 0 #fffff8, -0.12em 0 #fffff8, 0.15em 0 #fffff8, -0.15em 0 #fffff8;
-    /* dark */
+    /* dark styles */
     --blackBackground: #151515;
     --whiteText: #ddd;
     --blackShadow: 0.03em 0 #151515, -0.03em 0 #151515, 0 0.03em #151515, 0 -0.03em #151515, 0.06em 0 #151515, -0.06em 0 #151515, 0.09em 0 #151515, -0.09em 0 #151515, 0.12em 0 #151515, -0.12em 0 #151515, 0.15em 0 #151515, -0.15em 0 #151515;
+    /* classic font */
+    --classicFontFamily: et-book, Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
+    /* modern font */
+    --modernFontFamily: Arial;
 }
 
-.light {
+/* light, classic theme */ 
+.light-classic {
     --mainBg: var(--whiteBackground);
     --fontColor: var(--blackText);
     --textShadow: var(--whiteShadow);
+    --fontFamily: var(--classicFontFamily)
 }
 
-.dark {
+/* light, modern theme */ 
+.light-modern {
+    --mainBg: var(--whiteBackground);
+    --fontColor: var(--blackText);
+    --textShadow: var(--whiteShadow);
+    --fontFamily: var(--modernFontFamily)
+}
+
+/* dark, classic theme */ 
+.dark-classic {
     --mainBg: var(--blackBackground);
     --fontColor: var(--whiteText);
     --textShadow: var(--blackShadow);
+    --fontFamily: var(--classicFontFamily)
+}
+
+/* dark, modern theme */ 
+.dark-modern {
+    --mainBg: var(--blackBackground);
+    --fontColor: var(--whiteText);
+    --textShadow: var(--blackShadow);
+    --fontFamily: var(--modernFontFamily)
 }
 
 html {
@@ -76,7 +100,7 @@ body {
     padding-left: 6.25%;
     padding-right: 12.25%;
     padding-top: 1%;
-    font-family: et-book, Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
+    font-family: var(--fontFamily);
     background-color: var(--mainBg);
     color: var(--fontColor);
     max-width: 1600px;
