--- a/src/styles/tufte.css
+++ b/src/styles/tufte.css
@@ -4,73 +4,6 @@
 /* 1. Fonts 
 /*---------------------------------------------------------------------------*/ 
 
-/* import ET Book styles
-/* adapted from https://github.com/edwardtufte/et-book/blob/gh-pages/et-book.css */
-@font-face {
-    font-family: "et-book";
-    src: url("et-book/et-book-roman-line-figures/et-book-roman-line-figures.eot");
-    src: url("et-book/et-book-roman-line-figures/et-book-roman-line-figures.eot?#iefix") format("embedded-opentype"), url("et-book/et-book-roman-line-figures/et-book-roman-line-figures.woff") format("woff"), url("et-book/et-book-roman-line-figures/et-book-roman-line-figures.ttf") format("truetype"), url("et-book/et-book-roman-line-figures/et-book-roman-line-figures.svg#etbookromanosf") format("svg");
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: "et-book";
-    src: url("et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.eot");
-    src: url("et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.eot?#iefix") format("embedded-opentype"), url("et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.woff") format("woff"), url("et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.ttf") format("truetype"), url("et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.svg#etbookromanosf") format("svg");
-    font-weight: normal;
-    font-style: italic;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: "et-book";
-    src: url("et-book/et-book-bold-line-figures/et-book-bold-line-figures.eot");
-    src: url("et-book/et-book-bold-line-figures/et-book-bold-line-figures.eot?#iefix") format("embedded-opentype"), url("et-book/et-book-bold-line-figures/et-book-bold-line-figures.woff") format("woff"), url("et-book/et-book-bold-line-figures/et-book-bold-line-figures.ttf") format("truetype"), url("et-book/et-book-bold-line-figures/et-book-bold-line-figures.svg#etbookromanosf") format("svg");
-    font-weight: bold;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: "et-book-roman-old-style";
-    src: url("et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.eot");
-    src: url("et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.eot?#iefix") format("embedded-opentype"), url("et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.woff") format("woff"), url("et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.ttf") format("truetype"), url("et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.svg#etbookromanosf") format("svg");
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-}
-
-/* import the Libertine font */ 
-@font-face {
-    font-family: 'Libertine'; /* normal */
-    src: url('libertine/LinLibertine_R.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Libertine'; /* italic */
-    src: url('libertine/LinLibertine_RI.woff') format('woff');
-    font-weight: normal;
-    font-style: italic;
-}
-
-@font-face {
-    font-family: 'Libertine'; /* bold */
-    src: url('libertine/LinLibertine_RB.woff') format('woff');
-    font-weight: bold;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Libertine'; /* bold */
-    src: url('libertine/LinLibertine_RBI.woff') format('woff');
-    font-weight: bold;
-    font-style: italic;
-}
-
 /* import the Computer Modern font */ 
 @font-face {
     font-family: "Computer Modern";
@@ -130,8 +63,6 @@
     unicode-range: U+25CB;
 }  */
 
-/* @import url("https://fonts.googleapis.com/css?family=EB+Garamond&display=swap"); */
-
 /*---------------------------------------------------------------------------*/ 
 /* 2. Tufte CSS styles
 /*---------------------------------------------------------------------------*/ 
@@ -145,7 +76,7 @@
     --whiteText: #ddd;
     --blackShadow: 0.03em 0 #151515, -0.03em 0 #151515, 0 0.03em #151515, 0 -0.03em #151515, 0.06em 0 #151515, -0.06em 0 #151515, 0.09em 0 #151515, -0.09em 0 #151515, 0.12em 0 #151515, -0.12em 0 #151515, 0.15em 0 #151515, -0.15em 0 #151515;
     /* classic font */
-    --classicFontFamily: "Computer Modern Serif", Libertine, et-book, serif;
+    --classicFontFamily: "Computer Modern Serif", serif;
     /* modern font */
     --modernFontFamily:  "Computer Modern", Arial;
 }
@@ -193,7 +124,7 @@ body {
     padding-left: 6.25%;
     padding-right: 12.25%;
     padding-top: 1%;
-    font-family: var(--fontFamily);
+    font-family: var(--fontFamily), "White Circle";
     background-color: var(--mainBg);
     color: var(--fontColor);
     max-width: 1600px;
@@ -243,11 +174,6 @@ hr {
     border-top: 1px solid #ccc;
     margin: 1em 0;
     padding: 0;
-}
-
-
-.numeral {
-    font-family: et-book-roman-old-style;
 }
 
 .danger {
@@ -450,7 +376,7 @@ a:link,
 
 a:link::selection,
 a:link::-moz-selection {
-    /* text-shadow: 0.03em 0 #b4d5fe, -0.03em 0 #b4d5fe, 0 0.03em #b4d5fe, 0 -0.03em #b4d5fe, 0.06em 0 #b4d5fe, -0.06em 0 #b4d5fe, 0.09em 0 #b4d5fe, -0.09em 0 #b4d5fe, 0.12em 0 #b4d5fe, -0.12em 0 #b4d5fe, 0.15em 0 #b4d5fe, -0.15em 0 #b4d5fe; */
+    text-shadow: 0.03em 0 #b4d5fe, -0.03em 0 #b4d5fe, 0 0.03em #b4d5fe, 0 -0.03em #b4d5fe, 0.06em 0 #b4d5fe, -0.06em 0 #b4d5fe, 0.09em 0 #b4d5fe, -0.09em 0 #b4d5fe, 0.12em 0 #b4d5fe, -0.12em 0 #b4d5fe, 0.15em 0 #b4d5fe, -0.15em 0 #b4d5fe;
     background: #b4d5fe;
 }
 
@@ -481,7 +407,6 @@ img {
 
 .sidenote-number:after,
 .sidenote:before {
-    font-family: et-book-roman-old-style;
     position: relative;
     vertical-align: baseline;
     color: #f00000
